<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_white">

    <include layout="@layout/toolbar" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/company"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/newPrimaryText"
        android:text="@string/about_company"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/newSecondAryText"
        android:text="@string/about_phone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/newSecondAryText"
        android:text="@string/about_email"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/newSecondAryText"
        android:text="@string/about_url"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/newSecondAryText"
        android:text="@string/about_address"/>
</LinearLayout>